--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- Style sheet  -->
     <link rel="stylesheet" href="Styles/style.css">
     <!-- font Awesome  -->
     <script src="https://kit.fontawesome.com/e4bf19a9a2.js" crossorigin="anonymous"></script>
