--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <h1>Top Players</h1>
             <div class="players">
                 <div class="player"><img src="images/players/player-1.png" alt="">
-                    <h2>Anisur</h2>
+                    <h2>Harun</h2>
                 </div>
                 <div class="player"><img src="images/players/player-2.png" alt="">
                     <h2>Anisur</h2>
                 </div>
                 <div class="player"><img src="images/players/player-3.png" alt="">
-                    <h2>Anisur</h2>
+                    <h2>Rasel</h2>
                 </div>
                 <div class="player"><img src="images/players/player-4.png" alt="">
                     <h2>Anisur</h2>
